--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,17 @@
     "react/prop-types": 0,
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "import/order": ["error", { "newlines-between": "always" }]
+    "import/order": [
+      "error",
+      {
+        "groups": [["builtin", "external"]],
+        "newlines-between": "always"
+      },
+      {
+        "groups": ["internal", ["parent", "sibling", "index"]],
+        "newlines-between": "always"
+      }
+    ]
   },
   "settings": {
     "react": {
