--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "lint-staged": {
     "*.(js|jsx)": [
       "npm run lint:fix",
-      "git add"
+      "git add ."
     ]
   },
   "browserslist": {
@@ -64,6 +64,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.1.1"
   }
 }
